--- a/css/style.css
+++ b/css/style.css
@@ -30,11 +30,14 @@
     box-sizing: border-box;
 }
 
+body.hide-scrolling{
+    overflow-y: hidden;
+}
 body {
     min-height: 100vh;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     overflow: auto;
-    background: linear-gradient(315deg, rgba(255, 189, 251,0.4) 3%, rgb(157, 206, 255) 38%, rgb(136, 255, 247) 68%, rgb(255, 255, 255) 98%);
+    background: linear-gradient(315deg, rgba(255, 189, 251, 0.4) 3%, rgb(157, 206, 255) 38%, rgb(136, 255, 247) 68%, rgb(255, 255, 255) 98%);
     animation: gradient 30s ease infinite;
     background-size: 400% 400%;
     background-attachment: fixed;
@@ -64,11 +67,17 @@ section {
     border-radius: 30px;
     min-height: 90vh;
     border: 1px solid var(--white-alpha-40);
+    margin-bottom: 20px;
 }
 
 .main {
     max-width: 1200px;
     margin: auto;
+    transition: all 0.5s ease-in-out;
+}
+
+.main.fade-main{
+    opacity: 0;
 }
 
 img {
@@ -80,7 +89,9 @@ img {
     padding: 0 40px;
     width: 100%;
 }
-
+ul{
+    list-style: none;
+}
 .row {
     display: flex;
     flex-wrap: wrap;
@@ -89,12 +100,12 @@ img {
 .centerProperty {
     align-items: center;
 }
-/* 
-.hidden{
-    display: none !important;
-} */
 
-.section-padding{
+.hidden {
+    display: none !important;
+}
+
+.section-padding {
     padding: 80px 0;
 }
 
@@ -105,7 +116,7 @@ img {
     margin-bottom: 40px;
 }
 
-.section-title h2{
+.section-title h2 {
     font-size: 40px;
     text-transform: capitalize;
     font-family: 'Rubik Burned';
@@ -116,15 +127,18 @@ a {
 
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     width: 5px;
 }
-::-webkit-scrollbar-track{
+
+::-webkit-scrollbar-track {
     background-color: var(--white);
 }
-::-webkit-scrollbar-thumb{
+
+::-webkit-scrollbar-thumb {
     background-color: var(--main-color);
 }
+
 /* Buttons */
 
 button {
@@ -268,22 +282,22 @@ h6 {
 
 /* About Section */
 
-.imgPic{
+.imgPic {
     border-radius: 15%;
 }
 
-.about-img{
+.about-img {
     width: 40%;
     padding: 0 15px;
 }
 
-.about-text{
-    
+.about-text {
+
     width: 60%;
     padding: 0 15px;
 }
 
-.about-img .img-box{
+.about-img .img-box {
     background-color: var(--white-alpha-25);
     max-width: 380px;
     border: 1px solid var(--white-alpha-40);
@@ -292,30 +306,34 @@ h6 {
     box-shadow: 10px 10px 10px rgba(46, 46, 39, 0.715);
 }
 
-.about-img .img-box img{
+.about-img .img-box img {
     width: 100%;
 }
 
-.about-text h3{
+.about-text h3 {
     text-transform: capitalize;
     font-size: 20px;
     margin: 20px 0;
 }
-.about-text .skills{
+
+.about-text .skills {
     display: flex;
     flex-wrap: wrap;
 }
+
 .about-text .skill-item {
-    background-color:rgba(255, 255, 255, 0.4);
-    border:1px solid rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.4);
+    border: 1px solid rgba(255, 255, 255, 0.5);
     padding: 5px 15px;
     text-transform: capitalize;
     margin: 0 10px 10px 0;
     border-radius: 20px;
 }
+
 .about-tabs {
     margin-top: 20px;
 }
+
 .about-tabs .tab-item {
     padding: 2px 0;
     background-color: transparent;
@@ -333,11 +351,11 @@ h6 {
     transition: all 0.3s ease;
 }
 
-.about-tabs .tab-item:last-child{
+.about-tabs .tab-item:last-child {
     margin: 0;
 }
 
-.about-tabs .tab-item::before{
+.about-tabs .tab-item::before {
     content: '';
     position: absolute;
     left: 0;
@@ -348,27 +366,27 @@ h6 {
     transition: width 0.3s ease;
 }
 
-.about-tabs .tab-item:hover::before{
+.about-tabs .tab-item:hover::before {
     width: 100%;
 }
 
-.about-tabs .tab-item.active::before{
+.about-tabs .tab-item.active::before {
     width: 100%;
     background-color: var(--main-color);
 
 }
 
-.about-tabs .tab-item.active{
+.about-tabs .tab-item.active {
     color: var(--main-color);
     opacity: 1;
     cursor: auto;
 }
 
-.about-text .timeline{
+.about-text .timeline {
     position: relative;
 }
 
-.about-text .timeline::before{
+.about-text .timeline::before {
     content: '';
     position: absolute;
     height: 100%;
@@ -378,12 +396,12 @@ h6 {
     background-color: var(--main-color);
 }
 
-.about-text .tab-content{
+.about-text .tab-content {
     padding: 40px 0;
     display: none;
 }
 
-.about-text .tab-content.active{
+.about-text .tab-content.active {
     display: block;
 }
 
@@ -392,7 +410,8 @@ h6 {
     position: relative;
     padding: 10px 0 0 40px;
 }
-.about-text .timeline-item::before{
+
+.about-text .timeline-item::before {
     content: '';
     position: absolute;
     background-color: var(--main-color);
@@ -403,24 +422,27 @@ h6 {
     border-radius: 50%;
 
 }
-.about-text .timeline-item:last-child{
+
+.about-text .timeline-item:last-child {
     margin-bottom: 0;
 }
 
-.about-text .timeline-item .date{
+.about-text .timeline-item .date {
     display: block;
     color: var(--main-color);
     font-weight: bolder;
     font-family: 'Rubik Burned';
     margin: 0 0 10px;
 }
-.about-text .timeline-item h4{
+
+.about-text .timeline-item h4 {
     font-size: 18px;
     text-transform: capitalize;
     padding: 0 0 10px;
     font-family: 'Poppins';
 }
-.about-text .timeline-item h4 span{
+
+.about-text .timeline-item h4 span {
     font-weight: 400;
 }
 
@@ -441,9 +463,9 @@ h6 {
     font-weight: bold;
     font-size: 12px;
     transition: all .15s ease;
-  }
+}
 
-  .button_lg {
+.button_lg {
     position: relative;
     display: block;
     padding: 10px 20px;
@@ -451,9 +473,9 @@ h6 {
     background-color: #0f1923;
     overflow: hidden;
     box-shadow: inset 0px 0px 0px 1px transparent;
-  }
-  
-  .button_lg::before {
+}
+
+.button_lg::before {
     content: '';
     display: block;
     position: absolute;
@@ -462,9 +484,9 @@ h6 {
     width: 2px;
     height: 2px;
     background-color: #0f1923;
-  }
-  
-  .button_lg::after {
+}
+
+.button_lg::after {
     content: '';
     display: block;
     position: absolute;
@@ -474,9 +496,9 @@ h6 {
     height: 4px;
     background-color: #0f1923;
     transition: all .2s ease;
-  }
-  
-  .button_sl {
+}
+
+.button_sl {
     display: block;
     position: absolute;
     top: 0;
@@ -486,24 +508,196 @@ h6 {
     background-color: #ff4655;
     transform: skew(-15deg);
     transition: all .2s ease;
-  }
-  
-  .button_text {
-    position: relative;
-  }
-  
-  .button:hover {
-    color: #0f1923;
-  }
-  
-  .button:hover .button_sl {
-    width: calc(100% + 15px);
-  }
-  
-  .button:hover .button_lg::after {
-    background-color: #fff;
-  }
+}
 
+.button_text {
+    position: relative;
+}
+
+.button:hover {
+    color: #0f1923;
+}
+
+.button:hover .button_sl {
+    width: calc(100% + 15px);
+}
+
+.button:hover .button_lg::after {
+    background-color: #fff;
+}
+
+/* CSS */
+.web-visit-btn{
+  align-items: center;
+  background-color: #ffffff19;
+  border: 1px solid #000;
+  box-sizing: border-box;
+  color: #000;
+  cursor: pointer;
+  display: inline-flex;
+  fill: #000;
+  font-family: Inter,sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  height: 30px;
+  justify-content: center;
+  letter-spacing: -.8px;
+  line-height: 24px;
+  min-width: 140px;
+  outline: 0;
+  padding: 0 20px;
+  text-align: center;
+  text-decoration: none;
+  transition: all .3s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+
+
+.web-visit-btn:hover {
+  border-color: var(--main-color);
+  color: var(--main-color);
+  fill: var(--main-color);
+}
+
+
+@media (min-width: 768px) {
+  .web-visit-btn {
+    min-width: 170px;
+  }
+}
+
+/* Portfolio */
+
+.portfolio-item {
+    width: calc((100% /3) - 30px);
+    margin: 0 15px 25px;
+}
+
+.porfolio-thumbnail {
+    padding: 10px;
+    background-color: rgba(100, 100, 100, .1);
+    border: 1px solid var(--white-alpha-40);
+    border-radius: 10px;
+    box-shadow: 10px 10px 10px rgba(100, 100, 100, .4);
+}
+
+.porfolio-thumbnail img {
+    width: 100%;
+    border-radius: 5px;
+
+}
+
+.portfolio-item-detail {
+    display: none;
+}
+
+.portfolio-item h3 {
+    font-size: 20px;
+    text-transform: capitalize;
+    margin: 20px 0;
+}
+
+.profile-section {
+    margin-bottom: 50px;
+}
+
+
+/* pop up */
+
+
+.portfolio-detail-popup {
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 200;
+    visibility: hidden;
+}
+.portfolio-detail-popup.open{
+    visibility: visible;
+    overflow-y: auto;
+}
+
+.popup-inner{
+    min-height: 100vh;
+    padding: 40px 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+.popup-content{
+    background-color: var(--white-alpha-40);
+    padding: 30px;
+    border-radius: 30px;
+    max-width: 900px;
+    width: 100%;
+    border: 1px solid var(--white-alpha-40);
+    box-shadow: 10px 10px 20px rgba(100, 100, 100, .5);
+    backdrop-filter: var(--backdrop-filter-blur);
+    opacity: 0;
+    transform: scale(0.9);
+}
+
+.portfolio-detail-popup.open .popup-content{
+    opacity: 1;
+    transform: scale(1);
+    transition: all 0.5s ease;
+}
+
+.popup-header{
+    position: relative;
+}
+
+.popup-header .btn{
+    width: 40px;
+    height: 40px;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    box-shadow: 2px 3px 10px rgba(100, 100, 100, .3);
+    position: absolute;
+    right: -40px;
+    top: -40px;
+    background-color: rgba(255, 255, 255, .4);
+    border: var(--white-alpha-40);
+}
+
+.popup-thunbnail img{
+    border-radius: 10px;
+}
+
+.popup-header h3{
+    color: var(--blue-dark);
+    font-size: 25px;
+    text-transform: capitalize;
+    margin: 20px 0 15px;
+}
+
+.popup-body .description{
+    margin-bottom: 20px;
+}
+
+.popup-body .general-info li{
+    margin-bottom: 10px;
+    font-weight: 500;
+    text-transform: capitalize;
+
+}
+
+.popup-body .general-info li span{
+    font-weight: 300;
+}
+
+.popup-body .general-info li a {
+    color: var(--main-color);
+}
 /* Background Part */
 
 .wave {
@@ -558,9 +752,11 @@ h6 {
     0% {
         background-position: 0% 0%;
     }
+
     50% {
         background-position: 100% 100%;
     }
+
     100% {
         background-position: 0% 0%;
     }
