--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body {
     min-height: 100vh;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     overflow: auto;
-    background: linear-gradient(315deg, rgba(255, 189, 251, 0.4) 3%, rgb(157, 206, 255) 38%, rgb(136, 255, 247) 68%, rgb(255, 255, 255) 98%);
+    background: linear-gradient(315deg, rgba(255, 115, 246, 0.4) 3%, rgb(56, 143, 230) 38%, rgb(18, 254, 238) 68%, rgb(255, 202, 202) 98%);
     animation: gradient 30s ease infinite;
     background-size: 400% 400%;
     background-attachment: fixed;
@@ -46,7 +46,7 @@ body {
     line-height: 1.5;
     overflow-x: hidden;
     -webkit-tap-highlight-color: transparent;
-    padding: 5vh 15px;
+    padding: 35px 15px;
 
 }
 
@@ -65,15 +65,26 @@ body::before {
 section {
     background-color: var(--white-alpha-25);
     border-radius: 30px;
-    min-height: 90vh;
+    min-height: calc(100vh - 70px);
     border: 1px solid var(--white-alpha-40);
     margin-bottom: 20px;
+    display: none;
+}
+
+section.active{
+    display: block;
+    animation: fadeIn 0.3s ease-in-out forwards;
+}
+
+section.fade-out{
+    animation: fadeOut 0.3s ease-in-out forwards;
 }
 
 .main {
     max-width: 1200px;
     margin: auto;
     transition: all 0.5s ease-in-out;
+    position: relative;
 }
 
 .main.fade-main{
@@ -124,7 +135,7 @@ ul{
 
 a {
     text-decoration: none;
-
+    color: white;
 }
 
 ::-webkit-scrollbar {
@@ -215,7 +226,165 @@ button {
     width: 100%;
 }
 
+.header{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+    padding: 20px 0 0;
+}
 
+.header.active{
+    position: fixed;
+    top: 35px;
+    padding: 20px 15px;
+}
+
+.header.active .container{
+    max-width: 1200px;
+    margin: auto;
+}
+
+.header .nav{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 35px 15px;
+    overflow-y: auto;
+    visibility: hidden;
+}
+
+.header.active .nav{
+    visibility: visible;
+}
+
+.header .nav-inner{
+    min-height: calc(100vh - 70px);
+    background-color: var(--white-alpha-25);
+    border: 1px solid var(--white-alpha-40);
+    max-width: 1200px;
+    margin: auto;
+    backdrop-filter: var(--backdrop-filter-blur);
+    padding: 50px 0;
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: all 0.6s ease;
+}
+
+.header.active .nav-inner{
+    opacity: 1;
+}
+
+.header .nav-inner ul li{
+    text-align: center;
+}
+
+.header .nav-inner ul li a{
+    text-transform: capitalize;
+    font-size: 40px;
+    color: var(--blue-dark);
+    display: block;
+    font-weight: 500;
+    padding: 10px 15px;
+    transition: color 0.3s ease;
+    position: relative;
+}
+
+
+.header .nav-inner ul li a::before{
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 0%;
+    height: 50%;
+    background-color: var(--white-alpha-25);
+    z-index: -1;
+    transition: width 0.5s ease;
+}
+
+.header .nav-inner ul li a:hover::before{
+    width: 100%;
+}
+
+.header .nav-inner ul li a:hover{
+    color: var(--main-color);
+}
+
+.header .nav-togg{
+    width: 50px;
+    height: 50px;
+    border: none;
+    cursor: pointer;
+    border-radius: 50%;
+    background-color: var(--white-alpha-25);
+    border: 1px solid var(--cyan-light);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 15px;
+    z-index: 1;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.header .nav-togg.hide{
+    opacity: 0;
+    transition: none;
+}
+
+.header .nav-togg span{
+    height: 2px;
+    width: 24px;
+    background-color: var(--main-color);
+    position: relative;
+    transition: background-color 0.3s ease;
+}
+
+.header.active .nav-togg span{
+    background-color: transparent;
+}
+
+.header .nav-togg span::after , .header .nav-togg span::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--main-color);
+    transition: all 0.3s ease;
+}
+
+.header .nav-togg span::before{
+    left: 0;
+    transform: translateY(-8px);
+}
+
+.header.active .nav-togg span::before{
+    transform:rotate(45deg);
+}
+
+.header .nav-togg span::after{
+    left: 0;
+    transform: translateY(8px);
+}
+
+.header.active .nav-togg span::after{
+    transform:rotate(-45deg);
+}
+
+.header:not(.active) .nav-togg:hover span::before , .header:not(.active) .nav-togg:hover span::after{
+    width: 50%;
+}
+
+.flex-end{
+    justify-content: flex-end;
+}
 
 /* home Section */
 
@@ -232,12 +401,15 @@ button {
     border-radius: 50%;
     border: 5px solid var(--white-alpha-25);
     margin: auto;
-    box-shadow: 10px 10px 51px rgb(100, 100, 100);
+    box-shadow: 0 0 51px rgba(100, 100, 100,0.7);
 }
 
 .home-section {
-    display: flex;
     padding: 120px 0;
+}
+
+.home-section.active{
+    display: flex;
 }
 
 .home-img .img-box img {
@@ -698,17 +870,88 @@ h6 {
 .popup-body .general-info li a {
     color: var(--main-color);
 }
+
+
+.contact-form , .contact-info {
+    width: 50%;
+    padding: 0 15px;
+}
+
+.contact-form .input-group{
+    width: 100%;
+    margin-bottom: 25px;
+
+}
+
+.contact-form .input-control::placeholder{
+    color: var(--blue-dark);
+    opacity: 0.6;
+    font-weight: 300;
+
+}
+.contact-form .input-control{
+    width: 100%;
+    display: block;
+    height: 40px;
+    border-radius: 25px;
+    border: none;
+    background-color:rgba(255, 255, 255, 0.266);
+    box-shadow:0 10px 10px rgba(100, 100, 100,0.3);
+    font-size: 16px;
+    font-weight: 400;
+    padding: 0 20px;
+    color: var(--blue-dark);
+    border: 1px transparent;
+}
+
+.contact-form textarea.input-control{
+    height: 120px;
+    resize: none;
+    padding-top:20px;
+}
+
+.contact-info-item{
+    margin: 0 0 30px;
+    padding: 0 0 0 20px;
+}
+
+.contact-info-item h3{
+    margin: 0 0 5px;
+    text-transform: capitalize;
+    font-size: 20px;
+}
+
+.contact-info-item .social-link a{
+    display: inline-flex;
+    height: 40px;
+    width: 40px;
+    background-color:rgba(35, 35, 35, 0.1);
+    align-items: center;
+    justify-content: center;
+    color: var(--main-color);
+    border-radius: 50%;
+    border: 1px solid;
+    margin: 4px 6px 0 0;
+    transition: all 0.3s ease;
+}
+
+.contact-info-item .social-link a:hover{
+    color: var(--white);
+    background-color: var(--main-color);
+    box-shadow:0 0 20px rgba(100, 100, 100,0.8);
+    border: none;
+}
 /* Background Part */
 
 .wave {
-    background: rgb(255 255 255 / 25%);
+    background: rgba(41, 39, 108, 0.069);
     border-radius: 1000% 1000% 0 0;
     position: fixed;
     width: 200%;
-    height: 12em;
+    height: 8em;
     animation: wave 10s -3s linear infinite;
     transform: translate3d(0, 0, 0);
-    opacity: 0.8;
+    opacity: 0.3;
     bottom: 0;
     left: 0;
     z-index: -1;
@@ -759,5 +1002,89 @@ h6 {
 
     100% {
         background-position: 0% 0%;
+    }
+}
+
+/* Animation fadeOut */
+@keyframes fadeIn{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut{
+    0%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
+}
+
+
+@media(max-width:991px){
+    .container{
+        padding: 0;
+    }
+    .home-img , .home-text{
+        width: 100%;
+    }
+    .home-img{
+        order: -1;
+    }
+    .home-text{
+        text-align: center;
+    }
+    .home-img .img-box{
+        max-width: 300px;
+    }
+    .home-text button{
+        margin: 0 7px 15px;
+    }
+    .portfolio-item{
+        width: calc(50% - 30px);
+    }
+}
+
+@media(max-width:767px){
+    .about-img,.about-text,.contact-form , .contact-info{
+        width: 100%;
+    }
+
+    .about-text{
+        margin-top: 30px;
+    }
+    .portfolio-item{
+        width: calc(100% - 30px);
+    }
+    .popup-inner{
+        padding: 30px 15px;
+    }
+    .contact-info{
+        order: -1;
+        margin-bottom: 20px;
+    }
+
+    .contact-info-item{
+        padding: 0;
+    }
+    
+}
+
+@media(max-width:575px){
+    .header .nav-inner ul li a , .section-title h2{
+        font-size: 35px;
+    }
+    .home-text h1{
+        font-size: 30px;
+    }
+    .home-text h2 {
+        font-size: 15px;
+    }
+    .popup-header h3 {
+        font-size: 20px;
     }
 }
